k8s-yaml/ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: armory
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ui
