k8s-yaml/ui/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ui
  namespace: armory
spec:
  rules:
  - host: ui.od.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
